<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="speaker"
            type="com.android254.droidconKE2020.speakers.models.Speaker" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="?android:attr/colorBackground"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/imgSpeakerToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="70dp"
                    android:alpha="0.6"
                    android:contentDescription="@string/header_background"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_speaker_header"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_collapseMode="parallax"
                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.24">

                        <ImageButton
                            android:id="@+id/btn_nav_back"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="16dp"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_arrow_back_white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/imgToolbarLogo"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginStart="@dimen/fab_margin"
                            android:background="?selectableItemBackground"
                            android:clickable="true"
                            android:contentDescription="@string/text_toolbar_image_desc"
                            android:focusable="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_droidcon_logo"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/btnToolbarIcon"
                            app:layout_constraintStart_toEndOf="@+id/btn_nav_back"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <ImageView
                            android:id="@+id/btnToolbarIcon"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="@dimen/fab_margin"
                            android:background="?selectableItemBackground"
                            android:clickable="true"
                            android:contentDescription="@string/text_toolbar_icon_desc"
                            android:focusable="true"
                            android:src="@drawable/ic_sign_in_icon"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:behavior_overlapTop="70dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/spanView"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="70dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/circleImageViewBg"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/promo_background"
                    app:layout_constraintBottom_toBottomOf="@+id/spanView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spanView" />


                <cn.gavinliu.android.lib.shapedimageview.ShapedImageView
                    android:id="@+id/circleImageView"
                    imageUrl="@{speaker.imageUrl}"
                    android:layout_width="75dp"
                    android:layout_height="76dp"
                    app:layout_constraintBottom_toBottomOf="@id/circleImageViewBg"
                    app:layout_constraintEnd_toEndOf="@id/circleImageViewBg"
                    app:layout_constraintStart_toStartOf="@id/circleImageViewBg"
                    app:layout_constraintTop_toTopOf="@id/circleImageViewBg"
                    app:shape_mode="circle"
                    app:stroke_color="@color/colorAquaMarine"
                    app:stroke_width="2dp"
                    tools:src="@tools:sample/avatars"
                    />

                <TextView
                    android:id="@+id/tvSpeakerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@{speaker.name}"
                    android:textColor="@color/colorPurple"
                    android:textSize="@dimen/textSizeLarge"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/spanView"
                    app:layout_constraintStart_toEndOf="@id/circleImageViewBg"
                    tools:text="@string/text_speaker_name" />

                <TextView
                    android:id="@+id/tvSpeakerRole"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@{speaker.work}"
                    android:textSize="@dimen/textSizeSmaller"
                    app:layout_constraintEnd_toEndOf="@+id/tvSpeakerBio"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/circleImageViewBg"
                    app:layout_constraintTop_toBottomOf="@+id/spanView"
                    tools:text="@string/text_speaker_role" />

                <TextView
                    android:id="@+id/tvSpeakerCompany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@{speaker.company}"
                    android:textSize="@dimen/textSizeSmaller"
                    app:layout_constraintStart_toEndOf="@id/circleImageViewBg"
                    app:layout_constraintTop_toBottomOf="@+id/tvSpeakerRole"
                    tools:text="@string/text_speaker_company" />


                <ImageView
                    android:id="@+id/imgTwitter"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/mediumMargin"
                    android:contentDescription="@string/twitter_icon"
                    android:src="@drawable/ic_twitter"
                    app:layout_constraintStart_toEndOf="@id/circleImageViewBg"
                    app:layout_constraintTop_toBottomOf="@+id/tvSpeakerCompany" />


                <TextView
                    android:id="@+id/tvTopTwitterHandle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/mediumMargin"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/roboto"
                    android:text='@{"@"+speaker.socialMedia.twitter}'
                    android:textColor="@color/colorPurple"
                    app:layout_constraintBottom_toBottomOf="@+id/imgTwitter"
                    app:layout_constraintStart_toEndOf="@+id/imgTwitter"
                    app:layout_constraintTop_toTopOf="@+id/imgTwitter"
                    tools:text="@string/text_speaker_handle" />

                <TextView
                    android:id="@+id/tvSpeakerBio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/screenMargin"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@{speaker.bio}"
                    android:textSize="@dimen/textSizeSmall"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSpeakerBioLabel"
                    tools:text="@string/text_speaker_bio" />

                <TextView
                    android:id="@+id/tvSpeakerBioLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/text_speaker_bio_label"
                    android:textColor="?colorOnBackground"
                    android:textSize="@dimen/textSizeSmall"
                    app:layout_constraintStart_toStartOf="@+id/tvSpeakerBio"
                    app:layout_constraintTop_toBottomOf="@+id/tvTopTwitterHandle" />

                <TextView
                    android:id="@+id/tvTwitterHandleLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/text_twitter_handle_label"
                    android:textColor="@color/colorPurple"
                    android:textSize="@dimen/textSizeNormal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSpeakerBio" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/rlSpeakerHandle"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/btn_twitter_handle_bg"
                    android:padding="@dimen/mediumMargin"
                    app:layout_constraintBottom_toBottomOf="@+id/tvTwitterHandleLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tvTwitterHandleLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvTwitterHandleLabel">

                    <TextView
                        android:id="@+id/tvSpeakerHandle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/fab_margin"
                        android:fontFamily="@font/roboto"
                        android:text='@{"@"+speaker.socialMedia.twitter}'
                        android:textColor="@color/colorAquaMarine"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/copyIcon"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/text_speaker_handle" />

                    <ImageView
                        android:id="@+id/copyIcon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="3dp"
                        android:contentDescription="@string/copy_icon"
                        android:src="@drawable/ic_copy_outline"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/text_copy_handle"
                    android:textSize="@dimen/textSizeExtraSmall"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/rlSpeakerHandle"
                    app:layout_constraintTop_toBottomOf="@+id/rlSpeakerHandle"
                    app:layout_constraintVertical_bias="0.044" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>